[package]
name = "day_6"
version = "0.1.0"
authors = ["Jeremy Borgman <borgman.jeremy@pm.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[lib]
name = "graph"
path = "src/graph.rs"

[[bin]]
name = "main"
path = "src/main.rs"